fix: Remover gap padrão para melhorar espaçamento na responsividade

--- a/src/app/_components/dashboard/Dashboard.module.css
+++ b/src/app/_components/dashboard/Dashboard.module.css
@@ -20,6 +20,7 @@
     .content{
         margin-left: 0;
         padding: 0px 15px;
+        gap: 0;
     }
     
     .dashboard-main{
